[tool.poetry]
name = "redis-from-scratch-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "redis_from_scratch_python"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.0.278"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
